# app/controllers/product.controller.ts
@@ -1,4 +1,16 @@
-import { Route, Controller, Get, Tags, Security, Post, Body, Put, Path } from "tsoa";
+import {
+  Route,
+  Controller,
+  Get,
+  Tags,
+  Security,
+  Post,
+  Body,
+  Put,
+  Path,
+  Delete,
+  Inject,
+} from "tsoa";
 import { IProduct, IProductResponse, ProductDto } from "../types/product.type";
 import { Product } from "../database/Product";
 
@@ -6,8 +18,10 @@ import { Product } from "../database/Product";
 @Route("api/products")
 export class ProductController extends Controller {
   @Get("/")
-  public static async getProducts(): Promise<IProductResponse[]> {
-    return await Product.find().populate(["category", "condition"]);
+  public static async getProducts(
+    @Inject() condition: { [key: string]: string } = {},
+  ): Promise<IProductResponse[]> {
+    return await Product.find({ ...condition }).populate(["category", "condition"]);
   }
 
   @Security("jwtAuth")
@@ -17,15 +31,23 @@ export class ProductController extends Controller {
   }
 
   @Security("jwtAuth")
+  @Delete("{productId}")
+  public static async deleteProduct(@Path() productId: string): Promise<string> {
+    await Product.deleteOne({ _id: productId });
+    return "Deleted successful";
+  }
+
+  @Security("jwtAuth")
   @Put("/{productId}")
   public static async updateProduct(
     @Path() productId: string,
-    @Body() product: ProductDto): Promise<IProduct> {
-    const updated = await Product.findOneAndUpdate(
+    @Body() product: ProductDto,
+  ): Promise<IProduct> {
+    const updated = (await Product.findOneAndUpdate(
       { _id: productId },
       { $set: product },
-      { new: true }
-    ) as IProduct;
+      { new: true },
+    )) as IProduct;
     return updated;
   }
 }
